# tictactoe-desktop

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  cmake_install.cmake
core/: CMakeLists.txt  basetable.h  layout.cxx  layout.h  table.cxx  table.h
core/src/: basetable.h  layout.cxx  layout.h  table.cxx  table.h
core/src/ai/: ai.h  heuristicai.cxx  heuristicai.h  randomai.cxx  randomai.h  tableview.cxx  tableview.h  tableviewimpl.h
gtk3/: CMakeLists.txt
gtk4/: CMakeLists.txt
gtk4/src/: gtkmain.cxx
win32/: CMakeLists.txt  basewin.h  winentry.cpp  winmain.cxx
win32/resource/: resource.h  resource.rc
win32/src/: D2BrushToolkit.cpp  D2BrushToolkit.hpp  basewin.h  direct2d.cxx  direct2d.h  mainwindowlogic.cxx  mainwindowlogic.h  win32util.cxx  win32util.h  winmain.cxx
winapi/: CMakeLists.txt  winapi.cpp  winapi.h  winentry.cpp
windows/: CMakeLists.txt  winentry.cpp
